// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmissionsCalculator calculate for type 'food' 1`] = `
Object {
  "emissions": 6.17,
}
`;

exports[`EmissionsCalculator calculate for type 'transportation' 1`] = `
Object {
  "emissions": 112.2,
}
`;
